<resources>
    <string name="app_name">TicTacToe</string>

    <string name="homeScreen">Tic Tac Toe Game</string>
    <string name="playButton">Play</string>

    <string name="playNameScreen">Choose Player Names</string>
    <string name="PlayerOne">Player One</string>
    <string name="PlayerTwo">Player Two</string>
    <string name="confirmButton">Confirm</string>
    <string name="PlayerHint">Enter Player Name</string>
    
    <string name="playAgainButton">Play Again</string>
    <string name="homeButton">Home</string>

</resources>